data/derived/fa15/progs/unify/prog1625.ml.out
Characters 54-58:
  |(h::t)->h@[];;
           ^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
